--- a/gift.html
+++ b/gift.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gift</title>
+    <meta 名字="viewport" content="width=device-width, initial-scale=1.0" />
+    <标题>gift</标题>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
     <style>
       * {
@@ -12,7 +12,7 @@
         box-sizing: border-box;
       }
 
-      body {
+      内容 {
         background-color: #f5f5f5;
         display: flex;
         justify-content: center;
@@ -32,7 +32,7 @@
         height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
         z-index: 2000;
-        transition: all 0.5s ease;
+        transition: 所有 0.5s ease;
       }
 
       .gift-modal {
@@ -459,3 +459,4 @@
     </script>
   </body>
 </html>
+
